<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sign_in_logo"
        android:layout_width="149dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sign_in"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        android:background="@drawable/rounded_corner"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_detail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:ems="10"

        android:drawableStart="@drawable/ic_icon_two"
        android:drawablePadding="12dp"
        android:background="@drawable/rounded_corner"

        android:inputType="textPassword"
        android:hint="@string/password"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

    <TextView
        android:id="@+id/sign_in_detail"
        android:layout_width="311dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="@string/enter"
        android:textColor="#747A95"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_logo" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="340dp"
        android:layout_height="73dp"

        android:backgroundTint="#EC1B23"
        android:onClick="@string/sign_in"
        android:src="@drawable/button_background"
        android:text="@string/log_in"
        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.254" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="142dp"
        android:layout_height="98dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>